--- a/lyrics.html
+++ b/lyrics.html
@@ -41,8 +41,8 @@
  
    
   <nav>
-<img src="C:\Users\Admin\Desktop\my website\banner.jpg"width="1350" height="400">
-   <a style="padding-right: 20px;" href="eshita.html">Home</a>
+<img src="images\banner.jpg"width="1350" height="400">
+   <a style="padding-right: 20px;" href="index.html">Home</a>
 <a style="padding-right: 20px;" href="lyrics.html">Lyrics</a>
 <a style="padding-right: 20px;" href="about.html">About</a>
 <a style="padding-right: 20px;" href="Contact.html">Contact</a>  
@@ -225,7 +225,7 @@
 
 <div class="audio-container">
   <audio controls>
-    <source src="E:\Music\y2mate.com - आरभ ह परचड बल मसतक क झड  Aarambh hai Prachand  Full Song  with हनदHINDI LYRICS.mp3" type="audio/mpeg">
+    <source src="music\Aarambh Hai Prachand.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
   </audio>
   <button class="play-button" onclick="toggleAudio()">Play/Pause</button>
@@ -370,7 +370,7 @@ Aarambh Hai Prachand </p>
 <h2><b> Follow Us For More Lyrics </b><br>
 <br>
 
-<img src="C:\Users\Admin\Desktop\my website\channel.jpg"alt="channel" alt="logo"width="250" height="250">
+<img src="images\channel.jpg"alt="channel" alt="logo"width="250" height="250">
 
  
 <button type="button"><a href="https://youtube.com/@EshitaTale?si=SsdxaONQJYVoxk_l">Click Me!😈</a></button>
@@ -626,19 +626,19 @@ footer {
     <ul class="social-media">
         <li>
            <a href="https://instagram.com/lyrics_clubyt" target="_blank">
-                <img class="logo" src="C:\Users\Admin\Desktop\my website\insta logo.png" alt="Instagram">
+                <img class="logo" src="images\insta logo.png" alt="Instagram">
                 Instagram
             </a>
         </li>
         <li>
             <a href="https://youtube.com/@EshitaTale?si=SsdxaONQJYVoxk_l" target="_blank">
-                <img class="logo" src="C:\Users\Admin\Desktop\my website\youtube-logo-download.png"alt="YouTube">
+                <img class="logo" src="images\youtube-logo-download.png"alt="YouTube">
                 YouTube
             </a>
         </li>
         <li>
             <a href="https://linkedin.com/in/eshita-tale-2328a228a" target="_blank">
-                <img class="logo" src="C:\Users\Admin\Desktop\my website\pngimg.com - linkedIn_PNG14.png" alt="LinkedIn">
+                <img class="logo" src="images\pngimg.com - linkedIn_PNG14.png" alt="LinkedIn">
                 LinkedIn
             </a>
         </li>
