--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
  
    
   <nav>
-<img src="C:\Users\Admin\Desktop\my website\banner.jpg" width="1350" height="400">
+<img src="images\banner.jpg" width="1350" height="400">
    <a style="padding-right: 20px;" href="index.html">Home</a>
 <a style="padding-right: 20px;" href="lyrics.html">Lyrics</a>
 <a style="padding-right: 20px;" href="about.html">About</a>
@@ -391,19 +391,19 @@ footer {
     <ul class="social-media">
         <li>
            <a href="https://instagram.com/lyrics_clubyt" target="_blank">
-                <img class="logo" src="C:\Users\Admin\Desktop\my website\insta logo.png" alt="Instagram">
+                <img class="logo" src="images\insta logo.png" alt="Instagram">
                 Instagram
             </a>
         </li>
         <li>
             <a href="https://youtube.com/@EshitaTale?si=SsdxaONQJYVoxk_l" target="_blank">
-                <img class="logo" src="C:\Users\Admin\Desktop\my website\youtube-logo-download.png"alt="YouTube">
+                <img class="logo" src="images\youtube-logo-download.png"alt="YouTube">
                 YouTube
             </a>
         </li>
         <li>
             <a href="https://linkedin.com/in/eshita-tale-2328a228a" target="_blank">
-                <img class="logo" src="C:\Users\Admin\Desktop\my website\pngimg.com - linkedIn_PNG14.png" alt="LinkedIn">
+                <img class="logo" src="images\pngimg.com - linkedIn_PNG14.png" alt="LinkedIn">
                 LinkedIn
             </a>
         </li>
